[package]
name = "libamdgpu_top"
license = "MIT"
description = "A library for amdgpu_top"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["libdrm_link"]
libdrm_link = ["libdrm_amdgpu_sys/link_drm"]
libdrm_dynamic_loading = ["libdrm_amdgpu_sys/dynamic_loading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
libdrm_amdgpu_sys = { version = "0.8.3", git = "https://github.com/AMD-BC-250/libdrm-amdgpu-sys-rs", default-features = false, rev = "daa54c132d9d78402a49eb25422ff75f589ec4ab" }
nix = { version = "0.29", default-features = false, features = [ "ioctl" ] }
